# geog471-visualize

./: main.py  pyproject.toml
export-data/smooth/: 2015-01-01_2015-12-31_TestOutput.csv  2016-01-01_2016-12-31_TestOutput.csv  2017-01-01_2017-12-31_TestOutput.csv  2018-01-01_2018-12-31_TestOutput.csv  2019-01-01_2019-12-31_TestOutput.csv  2020-01-01_2020-12-31_TestOutput.csv
export-data/unsmooth/: 2015-01-01_2015-12-31_Output_noSmooth.csv  2016-01-01_2016-03-31_Output_noSmooth.csv  2016-04-01_2016-06-30_Output_noSmooth.csv  2016-07-01_2016-12-31_Output_noSmooth.csv  2017-01-01_2017-12-31_Output_noSmooth.csv  2018-01-01_2018-06-30_Output_noSmooth.csv  2018-07-01_2018-12-31_Output_noSmooth.csv  2019-01-01_2019-12-31_Output_noSmooth.csv  2020-01-01_2020-12-31_Output_noSmooth.csv
