[tool.poetry]
name = "geog471-visualize"
version = "0.1.0"
description = ""
authors = ["Sean aye <hello@seanaye.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.2"
matplotlib = "^3.4.1"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
